<resources>
    <string name="app_name">NUMAD14S-ArpitMehta</string>
    <string name="title_activity_about">About</string>
    <string name="myName"><b>Arpit Mehta</b></string>
    <string name="quitBtnText">Quit</string>
    <string name="aboutBtnText">About</string>
    <string name="genErrBtnText">Generate Error</string>
    <string name="sudokuBtnText">Sudoku</string>
    <string name="dictionaryBtnText">Dictionary</string>
    <string name="university">Northeastern University</string>
    <string name="myPhoto">My Photo</string>
    <string name="my_email"><i>arpit231087@gmail.com</i></string>
    <string name="degree">2nd Year MS in Computer Science</string>
    <string name="imei_display_str">IMEI: </string>
    <string name="sudoku_app_name">Sudoku</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Back</string>
    <string name="settings_label">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
		Sudoku is a logic-based number placement puzzle.
		Starting with a partially completed 9x9 grid, the
		objective is to fill the grid so that each
		row, each column, and each of the 3x3 boxes
		(also called <i>blocks</i>) contains the digits
		1 to 9 exactly once.</string>
    <string name="title_activity_dictionary">Test Dictionary</string>
    <string name="searchText">Search Word</string>
    <string name="ackButtonText">Acknowledgments</string>
    <string name="clearText">Clear</string>
    <string name="returnToMenuText">Return To Menu</string>
    <string name="title_activity_dictionary_ack">Acknowledgments</string>
    <string name="dictionary_ack_text">        \u2022 EditText usage: http://developer.android.com/guide/topics/ui/controls.html \n\n
        
        \u2022 Usage of EditText.onTextChangedListener function: 
        http://www.bipinrupadiya.com/2012/09/addtextchangedlistener-in-android.html \n\n
        
        \u2022 Ringtone usage for producing the beep sound during search: 
                http://stackoverflow.com/questions/4441334/how-to-play-an-android-notification-sound/9622040#9622040 \n\n
                
        \u2022 How to add text in billet points in TextView: 
        http://stackoverflow.com/questions/3429546/android-how-to-add-bullet-symbol-in-textview \n\n
        
        \u2022 Some links that I referenced regarding the quickest way to lookup words: \n
        \t 1) http://stackoverflow.com/questions/15663241/search-word-in-word-list-text-file-in-android \n
        \t 2) https://android.googlesource.com/platform/development/+/donut-release2%5E/samples/
        SearchableDictionary/src/com/example/android/searchabledict/Dictionary.java \n\n
        
        \u2022 Source of beep mp3: http://soundbible.com/1251-Beep.html \n\n
        
        \u2022 Idea of splitting the file was discussed in class. Initially my approach was to split the file 
        to 26 parts. Later upon discussions in class with Prof. Intille, splitting the wordlist.txt to 519 files made more sense \n\n	</string>
    <string name="wordGameBtnText">Word Game</string>
    <string name="title_activity_word_game">Word Game</string>
    <string name="title_activity_word_game_ack">Acknowledgments</string>
    <string name="wordGamePrefTitle">Word Game Settings</string>
    <string name="instructionsButtonText">Instructions</string>
    <string name="wordGameName">Letris</string>
    <string name="title_activity_letris">Letris</string>
    <string name="wordGameAckText">        \u2022 The word_game.mp3 is an excerpt from The Matrix Soundtrack called <b><i>Furious Angels by Rob Dougan</i></b>        		downloaded from http://mp3skull.com/mp3/the_matrix_reloaded_soundtrack.html \n\n
        
        \u2022 I referred to the following Stackoverflow post for random alphabet character generation: 
        		http://stackoverflow.com/questions/3292952/uppercase-random-number-of-characters-from-a-random-alphanumeric-string \n\n
        		
        \u2022 Design of the game was based on Android Sudoku Game from <i>Hello, Android 3rd Edition</i> by <b>Ed Burnette</b> \n\n
        
        \u2022 Source of button_begin_game.png: http://findicons.com/icon/238306/preferences_desktop_gaming?id=241126 \n\n
        
        \u2022 Source of button_black_pause.png: http://findicons.com/icon/176060/button_black_pause \n\n
        
        \u2022 Source of button_black_play.png: http://findicons.com/icon/176061/button_black_play?id=176451 \n\n
        
        \u2022 Source of button_black_hint.png: http://findicons.com/icon/176031/help_black?id=176388 \n\n
        
        \u2022 Source of button_black_stop.png: http://findicons.com/icon/175960/button_black_stop?id=394597 \n\n
        
        \u2022 Referred to the following link for vibrating on key press: 
        		http://karanbalkar.com/2013/07/programmatically-vibrating-android-device/ \n\n	</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="wordGameInstructionsText">        \u2022 <b>Selecting Characters</b> \n
        	Click on the game console icon to begin the game. A user will be given 3 minutes (180 seconds) to identify words in
        	the grid. The character selection is by simply touching the tile in which the character is placed. \n\n
        	
        \u2022 <b>Valid word check</b> \n
        	As the user selects characters they will appear in red below the grid. Once a valid word is selected the colour of the 
        	text wil automatically change to green. \n\n
        	
        \u2022 <b>Scoring</b> \n
        	Scoring is based on the length of the word identified. Longer the word, higher the points. Each character has the same 
        	weightage and hence the score is entirely based on the length. \n\n
        	
        \u2022 <b>Game controls</b> \n
        	The user will be able to see 4 game control buttons at the bottom. They are <i>Pause</i>, <i>Hints</i> and <i>Stop</i>        	button from left to right. If a user clicks on <i>Pause</i> button, the grid will become inactive and the timer stops. 
        	Also the <i>Pause</i> button is replaced by 
        	The game can be resumed by clicking on the <i>Resume</i> button. The <i>Hints</i> button, should the user choose to avail this option,
        	will prompt the users with word hints during game play. The <i>Stop</i> button stops the game play. \n\n
        	
        \u2022 <b>Game End</b> \n
        	At the end of the game, the user is shown his/her score and the words selected.</string>
    <string name="communicateText">Communication</string>
    <string name="title_activity_communication">Communication</string>
    <string name="title_activity_communication_ack">Acknowledgements</string>
    <string name="usernameText">Enter Username</string>
    <string name="registerBtnText">Register Device</string>
    <string name="unregisterBtnText">Unregister Device</string>
    <string name="synchronousCommText">Synchronous Communication</string>
    <string name="asynchronousCommText">Asynchronous Communication</string>
    <string name="registerUserBtnText">Register</string>
    <string name="registeredUsersBtnText">Registered Users</string>
    <string name="twoPlayerGameBtnText">Two Player Word Game</string>
    <string name="communicationAckText">        \u2022 GCM Android Developers Tutorial: http://developer.android.com/google/gcm/index.html \n\n
        
        \u2022 GCM Tutorial by Antonie Campbell: https://www.captechconsulting.com/blog/antoine-campbell/google-cloud-messaging-cloud-connection-server-tutorial \n\n</string>
    <string name="title_activity_login">Login</string>
    <string name="btnLoginText">Login</string>
    <string name="title_activity_two_player_word_game">Two Player Word Game</string>
    <string name="syncGamePlayBtnText">Synchronous Game Play</string>
    <string name="asyncGamePlayBtnText">Asynchronous Game Play</string>
    <string name="title_activity_two_player_word_game_ack">Acknowledgments</string>
    <string name="twoPlayerWordGameAckText">        
        \u2022 Android Background Processing: http://www.vogella.com/tutorials/AndroidBackgroundProcessing/article.html \n\n
        
        \u2022 Custom Alert Dialogs: http://www.learn-android-easily.com/2013/07/android-custom-alertdialog-example.html \n\n
        
        \u2022 Referred to the following link for implementing the accelerometer based shake detection: 
               http://stackoverflow.com/questions/2317428/android-i-want-to-shake-it \n\n
        
        \u2022 GCM Android Developers Tutorial: http://developer.android.com/google/gcm/index.html \n\n
        
        \u2022 GCM Tutorial by Antonie Campbell: https://www.captechconsulting.com/blog/antoine-campbell/google-cloud-messaging-cloud-connection-server-tutorial \n\n</string>
    <string name="title_activity_sync_game_play">Synchronous Game Play</string>
    <string name="title_activity_real_time_game_play">Two Player Word Game</string>
    <string name="inviteBtnText">Invite</string>
    <string name="gamePlayInstructionText">Instructions</string>
    <string name="logoutBtnText">Logout</string>
    <string name="realTimeGamePlayInstructionsText">        Click on \"Invite\" button. Enter the username of the other player you want to invite. 
        If the other user is also logged in, he/she will notice a dialog popup with the options 
        to either accept or decline you request.</string>
    <string name="title_activity_async_game_play">Turn Base Game Play</string>
    <string name="title_activity_turn_based_game_play">Turn Based Game Play</string>
    <string name="turnBasedGamePlayInstructionsText">        Click on \"Invite\" button. Enter the username of the other player you want to invite.	
        In the turn-based game play, once you invite another user to play, he/she will receive a notification, 
		if they are logged in. On clicking the notification, they can start the game play. You will be able 
		to begin your game play only when he/she accepts the invitation.	</string>
    <string name="title_activity_two_player_game_login">Login</string>
    <string name="shakeBtnText">Shake it up!</string>
    <string name="title_activity_shake_detect">Shake It Up!</string>
    <string name="shakeText">Shake to phone to randomly choose real-time or turn-based game play.</string>
    <string name="trickiest_part">Trickiest Part</string>
    <string name="title_activity_trickiest_part">Trickiest Part</string>
    <string name="btSpeak">Speak</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recognition">Voice Recognition</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>
</resources>