<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/geErrButton"
        android:layout_alignParentTop="true"
        android:onClick="showAboutActivity"
        android:text="@string/aboutBtnText" />

    <Button
        android:id="@+id/geErrButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutButton"
        android:layout_centerHorizontal="true"
        android:onClick="generateError"
        android:text="@string/genErrBtnText" />

    <Button
        android:id="@+id/sudokuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/geErrButton"
        android:layout_centerHorizontal="true"
        android:onClick="launchSudoku"
        android:text="@string/sudokuBtnText" />
    
    <Button
        android:id="@+id/dictionaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sudokuButton"
        android:layout_centerHorizontal="true"
        android:onClick="launchDictionary"
        android:text="@string/dictionaryBtnText" />
    
    <Button
        android:id="@+id/wordGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dictionaryButton"
        android:layout_centerHorizontal="true"
        android:onClick="launchWordGame"
        android:text="@string/wordGameBtnText" />
    
    <Button
        android:id="@+id/communicateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordGameButton"
        android:layout_centerHorizontal="true"
        android:onClick="communicate"
        android:text="@string/communicateText" />
    
    <Button
        android:id="@+id/twoPlayerGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/communicateButton"
        android:layout_centerHorizontal="true"
        android:onClick="launchTwoPlayerWordGame"
        android:text="@string/twoPlayerGameBtnText" />
    
    <Button
        android:id="@+id/trickiestPartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twoPlayerGameButton"
        android:layout_centerHorizontal="true"
        android:onClick="handleTrickiestPartBtnClick"
        android:text="@string/trickiest_part" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trickiestPartButton"
        android:layout_centerHorizontal="true"
        android:onClick="quitApplication"
        android:text="@string/quitBtnText" />

</RelativeLayout>