<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityCommunication"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CommunicationActivity" >
    
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerDevice"
        android:text="@string/registerBtnText" />

    <Button
        android:id="@+id/btnSyncComm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:text="@string/synchronousCommText"
        android:onClick="startSyncCommunication" />
    
    <Button
        android:id="@+id/btnAsyncComm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asynchronousCommText"
        android:layout_below="@+id/btnSyncComm"
        android:onClick="startAsyncCommunication" />
    
    <Button
        android:id="@+id/btnUnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAsyncComm"
        android:onClick="unregisterDevice"
        android:text="@string/unregisterBtnText" />

    <Button
        android:id="@+id/btnCommunicationAck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUnregister"
        android:onClick="showCommunicationAck"
        android:text="@string/ackButtonText" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCommunicationAck"
        android:onClick="quitActivity"
        android:text="@string/returnToMenuText" />

</RelativeLayout>