<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TwoPlayerWordGameActivity" >

    <Button
        android:id="@+id/syncGamePlayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="launchSyncGamePlayActivity"
        android:text="@string/syncGamePlayBtnText" />

    <Button
        android:id="@+id/asyncGamePlayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/syncGamePlayBtn"
        android:layout_centerHorizontal="true"
        android:onClick="launchAsyncGamePlayActivity"
        android:text="@string/asyncGamePlayBtnText" />
    
    <Button
        android:id="@+id/shakeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/asyncGamePlayBtn"
        android:layout_centerHorizontal="true"
        android:onClick="handleShake"
        android:text="@string/shakeBtnText" />

    <Button
        android:id="@+id/twoPlayerWordGameAckBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shakeBtn"
        android:layout_centerHorizontal="true"
        android:onClick="launchTwoPlayerWordGameAckActivity"
        android:text="@string/ackButtonText" />
    
    <Button
        android:id="@+id/quitTwoPlayerWordGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twoPlayerWordGameAckBtn"
        android:layout_centerHorizontal="true"
        android:onClick="quitTwoPlayerWordGame"
        android:text="@string/returnToMenuText" />

</RelativeLayout>
