<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/word_game_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WordGameActivity" >

    <TextView
        android:id="@+id/wordGameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/wordGameName" />

    <Button
        android:id="@+id/newWordGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordGameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/new_game_label"
        android:onClick="launchnewWordGame" />
    
    <Button
        android:id="@+id/wordGameInstructionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newWordGameButton"
        android:layout_centerHorizontal="true"
        android:text="@string/instructionsButtonText"
        android:onClick="showGameInstructions" />

    <Button
        android:id="@+id/wordGameAckButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordGameInstructionsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/ackButtonText"
        android:onClick="launchWordGameAckActivity" />

    <Button
        android:id="@+id/exitWordGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordGameAckButton"
        android:layout_centerHorizontal="true"
        android:onClick="exitWordGame"
        android:text="@string/returnToMenuText" />

</RelativeLayout>
