<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TurnBasedGamePlayActivity" >

    <TextView
        android:id="@+id/tvTbLoggedInUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnTbInvite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTbLoggedInUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/inviteBtnText"
        android:onClick="inviteClickHandler" />

    <Button
        android:id="@+id/btnTbInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTbInvite"
        android:layout_centerHorizontal="true"
        android:onClick="instructionsClickHandler"
        android:text="@string/gamePlayInstructionText" />

    <Button
        android:id="@+id/btnTbLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTbInstructions"
        android:layout_centerHorizontal="true"
        android:onClick="logoutClickHandler"
        android:text="@string/logoutBtnText" />

</RelativeLayout>
